[gd_scene load_steps=10 format=3 uid="uid://cyl28swe7b43k"]

[ext_resource type="Script" path="res://scripts/Main/HUDScene.gd" id="1_p2yk8"]
[ext_resource type="Theme" uid="uid://0knrve0pfa03" path="res://themes/Main/label.tres" id="2_xlm02"]
[ext_resource type="Theme" uid="uid://bj6ltbgw537xh" path="res://themes/Main/button.tres" id="3_y5hwm"]
[ext_resource type="AudioStream" uid="uid://x3n1q7m1tucn" path="res://sounds/Main/applause.wav" id="5_lidvl"]
[ext_resource type="AudioStream" uid="uid://dnw4emjqovlsj" path="res://sounds/Main/gameover.wav" id="6_sy8vj"]
[ext_resource type="StyleBox" uid="uid://bi1h1qrx1ms0j" path="res://themes/Main/panel.tres" id="7_x8ttk"]
[ext_resource type="AudioStream" uid="uid://csg3bmyrqi0d7" path="res://sounds/Main/House In a Forest Loop.ogg" id="7_yycmp"]

[sub_resource type="LabelSettings" id="LabelSettings_d2i8v"]
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_0fsyn"]
font_size = 22

[node name="HUDScene" type="CanvasLayer"]
layer = 2
script = ExtResource("1_p2yk8")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 720.0
offset_bottom = 1280.0
mouse_filter = 2

[node name="Initials_Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 24.0
offset_top = 24.0
offset_right = 152.0
offset_bottom = 88.0
theme = ExtResource("2_xlm02")
text = "Initials:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Initials" type="Label" parent="Control"]
layout_mode = 0
offset_left = 176.0
offset_top = 24.0
offset_right = 304.0
offset_bottom = 88.0
theme = ExtResource("2_xlm02")
text = "JLH"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Home_Button" type="Button" parent="Control"]
layout_mode = 0
offset_left = 328.0
offset_top = 1192.0
offset_right = 696.0
offset_bottom = 1256.0
theme = ExtResource("3_y5hwm")
text = "Home"

[node name="Score_Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 176.0
offset_top = 1032.0
offset_right = 296.0
offset_bottom = 1088.0
theme = ExtResource("2_xlm02")
text = "Game Score:
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="Label" parent="Control"]
layout_mode = 0
offset_left = 320.0
offset_top = 1032.0
offset_right = 440.0
offset_bottom = 1088.0
theme = ExtResource("2_xlm02")
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Applause" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource("5_lidvl")

[node name="GameOver" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource("6_sy8vj")

[node name="BackGroundMusic" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource("7_yycmp")

[node name="Reset_Button" type="Button" parent="Control"]
layout_mode = 0
offset_left = 24.0
offset_top = 1112.0
offset_right = 152.0
offset_bottom = 1168.0
theme = ExtResource("3_y5hwm")
text = "Reset"

[node name="Highscore_Button" type="Button" parent="Control"]
layout_mode = 0
offset_left = 464.0
offset_top = 1032.0
offset_right = 696.0
offset_bottom = 1168.0
theme = ExtResource("3_y5hwm")
text = "Highschore?"

[node name="HighScorePopup" type="Window" parent="Control"]
title = "Highscores"
position = Vector2i(40, 272)
size = Vector2i(640, 512)
visible = false
borderless = true
always_on_top = true

[node name="HighScoreTitle" type="Label" parent="Control/HighScorePopup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 636.0
offset_bottom = 508.0
text = "High Scores:"
label_settings = SubResource("LabelSettings_d2i8v")
autowrap_mode = 1

[node name="ColorRect" type="ColorRect" parent="Control/HighScorePopup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 636.0
offset_bottom = 508.0
color = Color(0.4, 0.6, 0.607843, 1)

[node name="ItemList" type="ItemList" parent="Control/HighScorePopup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 636.0
offset_bottom = 508.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
select_mode = 1
max_text_lines = 20
same_column_width = true

[node name="GameStartPanel" type="CanvasLayer" parent="Control"]
layer = 3
visible = false

[node name="Panel" type="Panel" parent="Control/GameStartPanel"]
offset_right = 720.0
offset_bottom = 1280.0
theme_override_styles/panel = ExtResource("7_x8ttk")

[node name="Play_Button" type="Button" parent="Control/GameStartPanel/Panel"]
layout_mode = 0
offset_left = 64.0
offset_top = 656.0
offset_right = 656.0
offset_bottom = 808.0
theme = ExtResource("3_y5hwm")
text = "Play"

[node name="Title" type="Label" parent="Control/GameStartPanel/Panel"]
layout_mode = 0
offset_left = 64.0
offset_top = 192.0
offset_right = 656.0
offset_bottom = 256.0
text = "TITLE"
label_settings = SubResource("LabelSettings_0fsyn")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Directions_Note" type="Label" parent="Control/GameStartPanel/Panel"]
layout_mode = 0
offset_left = 64.0
offset_top = 256.0
offset_right = 148.0
offset_bottom = 282.0
text = "Directions:"

[node name="Directions" type="Label" parent="Control/GameStartPanel/Panel"]
layout_mode = 0
offset_left = 64.0
offset_top = 282.0
offset_right = 656.0
offset_bottom = 520.0
text = "Directions"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[connection signal="pressed" from="Control/Home_Button" to="." method="_on_home_button_pressed"]
[connection signal="pressed" from="Control/Reset_Button" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="Control/Highscore_Button" to="." method="_on_highscore_pressed"]
[connection signal="pressed" from="Control/GameStartPanel/Panel/Play_Button" to="." method="_on_play_button_pressed"]
